# tap-calltrackingmetrics

./: .pre-commit-config.yaml  README.md  generate_schema.py  meltano.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  test.yml
scripts/: generate_schema.py
tap_calltrackingmetrics/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_calltrackingmetrics/schemas/: account.json  call.json  contact_list.json  contact_list_detail.json  sale.json  trigger.json  user.json
tests/: __init__.py  test_core.py
