[tool.poetry]
name = "tap-calltrackingmetrics"
version = "0.0.1"
description = "Singer tap for CallTrackingMetrics, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["FirstName LastName <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "CallTrackingMetrics",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<4"
singer-sdk = { version="~=0.49.1", extras = [] }
s3fs = { version = "~=2025.9.0", optional = true }
requests = "~=2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
genson = "~=1.3.0"
ruff = "~=0.13.0"
singer-sdk = { version="*", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
    "ANN401",
    "PTH123",
    "ERA001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-calltrackingmetrics = 'tap_calltrackingmetrics.tap:TapCallTrackingMetrics.cli'
