[project]
name = "tap-calltrackingmetrics"
version = "0.0.1"
description = "Singer tap for CallTrackingMetrics, built with the Meltano Singer SDK."
authors = [{ name = "FirstName LastName", email = "firstname.lastname@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "CallTrackingMetrics",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk[]~=0.53.2",
    "requests~=2.32.3",
    "typing-extensions~=4.15 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
s3 = ["s3fs~=2026.1.0"]

[project.scripts]
tap-calltrackingmetrics = "tap_calltrackingmetrics.tap:TapCallTrackingMetrics.cli"

[dependency-groups]
dev = [
    "genson~=1.3.0",
    "ruff~=0.14.1",
]
testing = [
    "pytest>=9",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.11",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = [
    "-v",
    "--durations=10",
]
log_level = "INFO"
minversion = "9"

[tool.mypy]
follow_untyped_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
    "ANN401",
    "PTH123",
    "ERA001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
